--- a/client/src/App.css
+++ b/client/src/App.css
@@ -40,3 +40,17 @@
 .read-the-docs {
   color: #888;
 }
+::-webkit-scrollbar {
+  width: 0; /* Correct width for the scrollbar */
+}
+.hide-scrollbar {
+  scrollbar-width: none; /* For Firefox */
+  -ms-overflow-style: none; /* For IE and Edge */
+}
+
+.hide-scrollbar::-webkit-scrollbar {
+  display: none; /* For Chrome, Safari, and Opera */
+}
+::-webkit-scrollbar {
+  width: 0; /* Correct width for the scrollbar */
+}
