--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,1 +1,15 @@
 @import "tailwindcss";
+::-webkit-scrollbar {
+  width: 0; /* Correct width for the scrollbar */
+}
+.hide-scrollbar {
+  scrollbar-width: none; /* For Firefox */
+  -ms-overflow-style: none; /* For IE and Edge */
+}
+
+.hide-scrollbar::-webkit-scrollbar {
+  display: none; /* For Chrome, Safari, and Opera */
+}
+::-webkit-scrollbar {
+  width: 0; /* Correct width for the scrollbar */
+}
